Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.14.0
-
Fix Version/s: 5.14.2, 5.15.0 Beta3
-
Component/s: WebEngine
-
Labels:None
-
Commits:62e55be6b8a23003ca877d917e5ef0cd3ff4110f (qt/qtwebengine/5.14.2)
Description
We have recently implemented Dark mode support for Sigil and have noticed white flashing on Qt 5.14.X systems that does not exist on Qt 5.12.6 systems. We tracked this down to QWebEnginePage setBackgroundColor() stopped working at some point. We typically test on macOS and Windows at Qt 5.12.X but on Linux our test systems are Arch based and so are using Qt 5.14.X.
Attached is a simple test case that when run on macOS and Windows using Qt 5.12.6 will properly reproduce the background color (in this test case yellow) with no flashing.
On Linux running Qt 5.14.X this same test program completely ignores the call to setBackgroundColor() and stays white.
To run the test program on macOS:
unzip bgcbug.zip
cd bgcbug
qmake
make
open ./bug.app
Attachments
Issue Links
- relates to
-
QTBUG-74519 5.11.3 => 5.12.0 QWebEnginePage backgroundcolor only visible when resizing
-
- Closed
-