Fix applying background color on RenderView

The RenderViewObserverQt_SetBackgroundColor message was sent with wrong
Routing ID.

This fix also cleans up RenderWidgetHostViewQt::UpdateBackgroundColor()
method.

Fixes: QTBUG-81781
Change-Id: Ida198fb061715d389859ace17e1f773db491c51d
Reviewed-by: Jüri Valdmann <juri.valdmann@qt.io>